Fix for overflowing names in submission list and single submission

--- a/app/assets/stylesheets/pages/_submission-single-page.scss
+++ b/app/assets/stylesheets/pages/_submission-single-page.scss
@@ -2,6 +2,13 @@
   margin-top: $bs3;
 }
 
+.submission-header {
+  @include clearfix;
+  margin-bottom: $bs1;
+  word-break: break-all;
+  line-height: $bs3;
+}
+
 .submission-header-status {
   float: right;
   font-weight: 100;
